fixed config & readme

--- a/fluent.conf
+++ b/fluent.conf
@@ -22,11 +22,7 @@
 <source>
   @type tail
   path /var/log/containers/*.log
-  <storage>
-    @type local
-    persistent true
-    path /pos
-  </storage>
+  pos_file /pos/containers.pos
   time_key time
   time_format %Y-%m-%dT%H:%M:%S.%NZ
   tag kubernetes.*
