--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v2alpha1
+apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: kube-gelf-reload-config
@@ -14,7 +14,7 @@ spec:
           serviceAccountName: kube-gelf
           containers:
           - name: cron
-            image: roffe/kubectl:1.7.6
+            image: roffe/kubectl:1.8.2
             args:
             - /bin/sh
             - -c
