--- a/cron.yaml
+++ b/cron.yaml
@@ -14,7 +14,7 @@ spec:
           serviceAccountName: kube-gelf
           containers:
           - name: cron
-            image: roffe/kubectl:1.8.3
+            image: roffe/kubectl:v1.9.0
             args:
             - /bin/sh
             - -c
