--- a/fluent.conf
+++ b/fluent.conf
@@ -36,14 +36,23 @@
   bearer_token_file /var/run/secrets/kubernetes.io/serviceaccount/token
 </filter>
 
+<filter access>
+  @type record_transformer
+  <record>
+    hostname "#{ENV['NODENAME']}"
+  </record>
+</filter>
+
+
 <match **>
    @type copy
    <store>
-     @type gelf
+     @type graylog
      include_tag_key true
      host "#{ENV['GELF_HOST']}"
      port "#{ENV['GELF_PORT']}"
-     flush_interval 5s
+     flush_interval 10s
+     num_threads 2
      use_record_host true
      buffer_chunk_limit 4096K
      buffer_queue_limit 512
