reverted output plugin as the gem one does not suppord UDP output

--- a/fluent.conf
+++ b/fluent.conf
@@ -47,7 +47,7 @@
 <match **>
    @type copy
    <store>
-     @type graylog
+     @type gelf
      include_tag_key true
      host "#{ENV['GELF_HOST']}"
      port "#{ENV['GELF_PORT']}"
