--- a/fluent.conf
+++ b/fluent.conf
@@ -43,7 +43,6 @@
   </record>
 </filter>
 
-
 <match **>
    @type copy
    <store>
@@ -51,6 +50,16 @@
      include_tag_key true
      host "#{ENV['GELF_HOST']}"
      port "#{ENV['GELF_PORT']}"
+     # protocol <tcp or udp>
+     protocol "#{ENV['GELF_PROTOCOL']}"
+     # tls <true or false>
+     # tls_options {}
+     # Supported tls_options:
+     # 'no_default_ca' [Boolean] prevents OpenSSL from using the systems CA store.
+     # 'tls_version' [Symbol] any of :TLSv1, :TLSv1_1, :TLSv1_2 (default)
+     # 'cert' [String, IO] the client certificate file
+     # 'key' [String, IO] the key for the client certificate
+     # 'all_ciphers' [Boolean] allows any ciphers to be used, may be insecure
      flush_interval 10s
      num_threads 2
      use_record_host true
@@ -59,3 +68,8 @@
      max_retry_wait 300
    </store>
 </match>
+
+# Valid log_level's are: fatal, error, warn, info, debug, trace
+<system>
+  log_level warn
+</system>
