--- a/fluent.conf
+++ b/fluent.conf
@@ -43,6 +43,11 @@
   </record>
 </filter>
 
+<filter **>
+ @type record_modifier
+ char_encoding utf-8
+</filter>
+
 <match **>
    @type copy
    <store>
