--- a/fluent.conf
+++ b/fluent.conf
@@ -12,7 +12,7 @@
     path /pos
   </storage>
   <entry>
-    field_map {"MESSAGE": "log", "_PID": ["process", "pid"], "_CMDLINE": "process", "_COMM": "cmd"}
+    field_map '{"MESSAGE": "log", "_PID": ["process", "pid"], "_CMDLINE": "process", "_COMM": "cmd"}'
     fields_strip_underscores true
     fields_lowercase true
   </entry>
@@ -55,7 +55,6 @@
      include_tag_key true
      host "#{ENV['GELF_HOST']}"
      port "#{ENV['GELF_PORT']}"
-     # protocol <tcp or udp>
      protocol "#{ENV['GELF_PROTOCOL']}"
      # tls <true or false>
      # tls_options {}
